v2.6.x/site/en/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: This page provides a list of tutorials for you to interact with Milvus and third-party tools.
title: Integrations Overview
---

# Integrations Overview

This page provides a list of tutorials for you to interact with Milvus and third-party tools.

| Tutorial | Use Case | Partners or Stacks | 
| -------- | -------- | --------- |
| [RAG with Milvus and LlamaIndex](integrate_with_llamaindex.md) | RAG | Milvus, LLamaIndex |
| [RAG with Milvus and LangChain](integrate_with_langchain.md) | RAG | Milvus, LangChain |
| [Milvus Hybrid Search Retriever in LangChain](milvus_hybrid_search_retriever.md) | Hybrid Search | Milvus, LangChain |
| [Use Milvus as a Vector Store in LangChain](basic_usage_langchain.md) | Semantic Search | Milvus, LangChain |
| [Using Full-Text Search with LangChain and Milvus](full_text_search_with_langchain.md) | Full-Text Search | Milvus, LangChain |
| [RAG with Milvus and Haystack](integrate_with_haystack.md) | RAG | Milvus, Haystack |
| [RAG with Milvus and LlamaIndex Async API](llamaindex_milvus_async.md) | Ochestration | Milvus, LlamaIndex |
| [Building RAG with Milvus, vLLM, and Llama 3.1](milvus_rag_with_vllm.md) | RAG | Milvus, vLLM, LlamaIndex |
| [Using Full-Text Search with LlamaIndex and Milvus](llamaindex_milvus_full_text_search.md) | Full-Text Search | Milvus, LlamaIndex |
| [Deploying Dify with Milvus](dify_with_milvus.md) | Ochestration | Milvus, Dify |
| [Building a RAG System Using Langflow with Milvus](rag_with_langflow.md) | Ochestration | Milvus, Langflow |
| [Use Milvus in PrivateGPT](use_milvus_in_private_gpt.md) | Ochestration | vector search |
| [Use Milvus in DocsGPT](use_milvus_in_docsgpt.md) | Ochestration | DocsGPT, Milvus |
| [Use Milvus with SambaNova](use_milvus_with_sambanova.md) | Orchestration | Milvus, SambaNova |
| [Getting Started with Dynamiq and Milvus](milvus_rag_with_dynamiq.md) | Orchestration | Milvus, Dynamiq |
| [Build RAG with Llama Stack with Milvus](llama_stack_with_milvus.md) | Orchestration | Milvus, Llama Stack |
| [Chatbot Agent with Milvus and MemGPT](integrate_with_memgpt.md) | Agent | Milvus, MemGPT |
| [Multi-agent Systems with Mistral AI, Milvus and Llama-agents](llama_agents_metadata.md) | Agent | Milvus, Mistral AI, LlamaIndex |
| [Getting Started with Mem0 and Milvus](quickstart_mem0_with_milvus.md) | Agents | Mem0, Milvus |
| [Integrate Milvus with Agno](integrate_with_agno.md) | Agents | Milvus, Agno |
| [MCP + Milvus: Connecting AI with Vector Databases](milvus_and_mcp.md) | Agents | Milvus, MCP |
| [Milvus Integration with OpenAI Agents: A Step-by-Step Guide](openai_agents_milvus.md) | Agents | Milvus, OpenAI |
| [RAG Evaluation with Ragas and Milvus](integrate_with_ragas.md) | Evaluation | Milvus, Ragas |
| [Evaluation with DeepEval](evaluation_with_deepeval.md) | Evaluation & Observability | Milvus, DeepEval |
| [Evaluation with Arize Pheonix](evaluation_with_phoenix.md) | Evaluation & Observability | Milvus, Arize Pheonix |
| [Milvus in Langfuse](integrate_with_langfuse.md) | Observability | Milvus, Langfuse |
| [Semantic Search with Milvus and OpenAI](integrate_with_openai.md) | Semantic Search | Milvus, OpenAI |
| [Question Answering Using Milvus and Cohere](integrate_with_cohere.md) | Semantic Search | Milvus, Cohere |
| [Question Answering using Milvus and HuggingFace](integrate_with_hugging-face.md) | Question Answering | Milvus, HuggingFace |
| [Image Search using Milvus and Pytorch](integrate_with_pytorch.md) | Semantic Search | Milvus, Pytorch |
| [Movie Search using Milvus and SentenceTransfromers](integrate_with_sentencetransformers.md) | Semantic Search | Milvus, SentenceTransformers |
| [Conduct Vision Searches with Milvus and FiftyOne](integrate_with_voxel51.md) | Semantic Search | Milvus, FiftyOne |
| [Semantic Search with Milvus and VoyageAI](integrate_with_voyageai.md) | Semantic Search | Milvus, VoyageAI |
| [RAG with Milvus and BentoML](integrate_with_bentoml.md) | RAG | Milvus, BentoML |
| [RAG with Milvus and DSPy](integrate_with_dspy.md) | RAG | Milvus, DSPy |
| [Semantic Search with Milvus and Jina](integrate_with_jina.md) | Semantic Search | Milvus, Jina |
| [Milvus on Snowpark Container Services](integrate_with_snowpark.md) | Data Connection | Milvus, Snowpark |
| [Rule-based Retrieval with Milvus and WhyHow](integrate_with_whyhow.md) | Question Answering | Milvus, WhyHow |
| [How to deploy FastGPT with Milvus](integrate_with_fastgpt.md) | RAG | Milvus, FastGPT |
| [Write SQL with Vanna and Milvus](integrate_with_vanna.md) | RAG | Milvus, Vanna |
| [RAG with Milvus and Camel](integrate_with_camel.md) | RAG | Milvus, Camel |
| [Airbyte & Milvus: Open-Source Data Movement Infrastructure](integrate_with_airbyte.md) | Data Connection | Milvus, Airbyte |
| [Advanced Video Search: Leveraging Twelve Labs and Milvus for Semantic Retrieval](video_search_with_twelvelabs_and_milvus.md) | Semantic Search | Milvus, Twelve Labs |
| [Connect Kafka with Milvus](kafka-connect-milvus.md) | Data Sources | Milvus, Kafka |
| [Kotaemon RAG with Milvus](kotaemon_with_milvus.md) | RAG | Milvus, Kotaemon |
| [Retrieval-Augmented Generation: Crawling Websites with Apify and Saving Data to Milvus for Question Answering](apify_milvus_rag.md) | Data Sources | Milvus, Apify |
| [Build RAG on Arm Architecture](build_rag_on_arm.md) | RAG | Milvus, Arm |
| [Build RAG with Milvus and Fireworks AI](build_RAG_with_milvus_and_fireworks.md) | LLMs | Milvus, Fireworks AI |
| [Build RAG with Milvus and Lepton AI](build_RAG_with_milvus_and_lepton.md) | LLMs | Milvus, Lepton AI |
| [Build RAG with Milvus and SiliconFlow](build_RAG_with_milvus_and_siliconflow.md) | LLMs | Milvus, SiliconFlow |
| [Build a RAG with Milvus and Unstructured](rag_with_milvus_and_unstructured.md) | Data Sources | Milvus, Unstructured |
| [Build RAG with Milvus + PII Masker](RAG_with_pii_and_milvus.md) | Data Sources | Milvus, PII Masker |
| [Knowledge Table with Milvus](knowledge_table_with_milvus.md) | Knowledge Engineering | Knowledge Table, Milvus |
| [Build RAG with Milvus and Cognee](build_RAG_with_milvus_and_cognee.md) | Knowledge Engineering | Milvus, Cognee |
| [Build RAG with Milvus and Gemini](build_RAG_with_milvus_and_gemini.md) | LLMs | Milvus, Gemini |
| [Build RAG with Milvus and Ollama](build_RAG_with_milvus_and_ollama.md) | LLMs | Milvus, Ollama |
| [Build RAG with Milvus and DeepSeek](build_RAG_with_milvus_and_deepseek.md) | LLMs | Milvus, DeepSeek |
| [Building RAG with Milvus and Crawl4AI](build_RAG_with_milvus_and_crawl4ai.md) | Data Sources | Milvus, Crawl4AI |
| [Building RAG with Milvus and Firecrawl](build_RAG_with_milvus_and_firecrawl.md) | Data Sources | Milvus, Firecrawl |
| [Integrate Milvus with MindsDB](integration_with_mindsdb.md) | Knowledge Engineering | Milvus, MindsDB |
| [Build RAG with Milvus and Feast](build_RAG_with_milvus_and_feast.md) | Data Sources | Milvus, Feast |
| [Build RAG with Milvus and Docling](build_RAG_with_milvus_and_docling.md) | Data Sources | Milvus, Docling |
| [Building RAG with Milvus and EmbedAnything](build_RAG_with_milvus_and_embedAnything.md) | Embedding | Milvus, EmbedAnything |
| [Getting Started with Milvus and n8n](milvus_and_n8n.md) | Orchestration | Milvus, n8n |
| [Use Milvus in AnythingLLM](use_milvus_in_anythingllm.md) | Orchestration | Milvus, AnythingLLM |
| [Using NLWeb with Milvus](NLWeb_with_milvus.md) | Data Sources | Milvus, NLWeb |
| [LangExtract + Milvus Integration](langextract_milvus_demo.md) | Data Sources | Milvus, LangExtract |
| [Semantic Search with ZeroEntropy and Milvus](https://colab.research.google.com/drive/1bONndT8MIxJZzzV4QTpQfU-eyWdL1Q1m?usp=sharing) | Semantic Search | Milvus, ZeroEntropy |
| [Integrating Milvus Text Embedding Function with LangChain](langchain_milvus_dido.md) | Text Embedding | Milvus, LangChain |
| [Building a Dual-Source RAG Agent with Exa and Milvus] | Data Sources | Milvus, Exa |
